# SinfoniaPepperTeam

./: .gitignore  README.md
gmapping/launch/: slam_gmapping_pr2.launch
ira_laser_tools/launch/: laserscan_multi_merger.launch
make_order/: package.xml
make_order/src/: makeOrder.py
rrt_exploration/launch/: single.launch
rrt_exploration/scripts/: filter.py  functions.py
sinfonia_pepper_applications/: CMakeLists.txt  package.xml
sinfonia_pepper_applications/deliver_order/: CMakeLists.txt  package.xml
sinfonia_pepper_applications/make_order/: CMakeLists.txt
sinfonia_pepper_applications/scripts/: applications_scheduler.py  test_order.py
sinfonia_pepper_applications/take_order/: CMakeLists.txt  package.xml
sinfonia_pepper_packages/: CMakeLists.txt  package.xml
sinfonia_pepper_robot_toolkit/: CMakeLists.txt  package.xml  robot_toolkit
sinfonia_pepper_robot_toolkit/launch/: robot_toolkit.launch  robot_toolkit_test.launch
sinfonia_pepper_robot_toolkit/msg/: File.msg  LEDs.msg  MoveToVector.msg  MoveTowardVector.msg  T2S.msg  Wav.msg
sinfonia_pepper_robot_toolkit/scripts/: robot_control.py  robot_interaction.py  robot_lasers.py  robot_sensors.py  robot_tablet_management.py  robot_toolkit_node.py  robot_toolkit_streaming_node.py  robot_toolkit_test_node.py  utils.py
sinfonia_pepper_robot_toolkit/srv/: ReadJoint.srv  TakePicture.srv
sinfonia_pepper_tools_decisionmaking/: CMakeLists.txt  package.xml
sinfonia_pepper_tools_interaction/: CMakeLists.txt  package.xml
sinfonia_pepper_tools_navigation/: CMakeLists.txt  package.xml
templates/: license
(+75 files in other folders)
